--- a/app/src/main/res/layout/activity_flo_song_detail.xml
+++ b/app/src/main/res/layout/activity_flo_song_detail.xml
@@ -109,7 +109,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:text="@{StringUtil.INSTANCE.formatSongDuration(viewModel.liveCurrentTime)}"
+                    android:text="@{StringUtil.formatSongDuration(viewModel.liveCurrentTime)}"
                     android:textColor="@color/ternary_text"
                     android:textSize="12sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -120,7 +120,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:text="@{StringUtil.INSTANCE.formatSongDuration(viewModel.liveTotalTime)}"
+                    android:text="@{StringUtil.formatSongDuration(viewModel.liveTotalTime)}"
                     android:textColor="@color/fourth_text"
                     android:textSize="12sp"
                     app:layout_constraintEnd_toEndOf="parent"
